--- a/2nd.html
+++ b/2nd.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/2nd.css">
     <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="./src/slider.css">
+    <link rel="stylesheet" href="./index.html">
 </head>
 
 <body>
