--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="icon-Twitter"></div>
                    
                 </div>
-                <a href="/2nd.html" class="bold text_black">next page...</a>
+                <a href="/2nd.html" class="bold text_black" target="_blank">next page...</a>
             </div>
         </div>
 
