--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="icon-Twitter"></div>
 
                 </div>
-                <a href="./2nd.html" class="bold text_black" target="_blank">next page...</a>
+                <a href="./2nd.html" class="bold text_black" target="_blan">next page...</a>
             </div>
         </div>
 
